tests/errors/test_45.x
// Duplicable struct members

struct Data -> {
    x: i64,
    x: i8*
}

fn main() -> void {

}